<resources>
    <string name="app_name">evenly</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="client_id">734619241696-tv5q5fb8gastqh81oioqc599khue6dej.apps.googleusercontent.com</string>
    <string name="welcome_to_evenly">Welcome to Evenly</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="api_base_url">http://10.0.2.2:8000/</string>
</resources>